@@ -4,6 +4,12 @@ HISTORY
 History of changes to PHC (name of developer listed in brackets)::
 
     PloneHelpCenter 1.6dev
+
+    - Removed shoehorning a vocabulary into the subject field since it's
+      really based out of the catalog and AddRemoveWidget is now smart
+      enough to understand that. With the release of ARW 1.4, users will
+      no longer get errors with non-ascii keywords.
+      [dunlapm]
     
     - Added time-based ram caching to several expensive view methods.
       Default invalidation is 30 minutes, but may be changed in
